<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/mapPageButtonString"
            android:layout_width="130dp"
            android:layout_height="130dp" android:id="@+id/zooMapViewButton"
            app:layout_constraintStart_toStartOf="@+id/verticalGuide"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuide" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/donatePageButtonString"
            android:layout_width="130dp"
            android:layout_height="130dp" android:id="@+id/donateViewButton"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuide" app:layout_constraintStart_toStartOf="@+id/verticalGuide"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/newsPageButtonString"
            android:layout_width="130dp"
            android:layout_height="130dp" android:id="@+id/newsViewButton"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuide" app:layout_constraintEnd_toStartOf="@+id/verticalGuide"
            android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/horizontalGuide" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.4"
    />
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/verticalGuide"
            app:layout_constraintGuide_percent="0.5"
    />
    <Button
            android:text="@string/rankingPageButtonString"
            android:layout_width="130dp"
            android:layout_height="130dp" android:id="@+id/zooListViewButton"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuide"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/horizontalGuide"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>