<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_weight="1"
            android:id="@+id/ZooListView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
    <com.google.android.material.appbar.AppBarLayout android:layout_height="wrap_content"
                                                     android:layout_width="0dp"
                                                     app:layout_constraintStart_toStartOf="parent"
                                                     app:layout_constraintEnd_toEndOf="parent"
                                                     app:layout_constraintHorizontal_bias="0.0"
                                                     app:layout_constraintTop_toTopOf="parent"
                                                     android:id="@+id/appBarLayout">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:gravity="fill_horizontal">
            <ImageButton android:layout_width="wrap_content" android:layout_height="match_parent"
                         android:onClick="switchToMainActivity"
                         android:contentDescription="@string/goBackString"
                         android:layout_weight="1"
                         android:id="@+id/topBarBackButton" app:icon="?attr/actionModeCloseDrawable"
                         android:textColor="#FFEB3B"
                         android:gravity="start" android:textSize="32sp" android:src="?attr/actionModeCloseDrawable"
                         android:background="#00FFFFFF" android:tint="#FFFFFF" android:minWidth="32dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:textAlignment="center" android:gravity="center"
                      android:text="@string/infoTopBarText" android:textColor="#FFFFFF" android:textSize="32sp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/searchZooField" android:layout_weight="1" android:visibility="gone"
                    android:importantForAutofill="no"/>
            <ImageButton android:layout_width="wrap_content" android:layout_height="match_parent"
                         android:onClick="searchAction"
                         android:contentDescription="@string/searchActionString"
                         android:layout_weight="1"
                         android:id="@+id/topBarSearchButton" app:icon="?android:attr/actionModeWebSearchDrawable"
                         android:src="?android:attr/actionModeWebSearchDrawable"
                         android:background="#00FFFFFF" android:tint="#FFFFFF"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>